--- a/static/stat120/Day8.html
+++ b/static/stat120/Day8.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 18 2024
+ January 19 2024
 
 ---
 
@@ -172,24 +172,8 @@ class: middle
 
 &lt;br&gt;
 
-.bqt[
-A `\(95\%\)` confidence interval will contain the true parameter for 95% of all samples.]
-
-
----
-
-class: middle
-
-# Gallup Poll Result Interpretation  
-  
-&gt; " `\(\ldots\)`  the margin of sampling error is `\(\pm\)` 3 percentage points at the `\(95\%\)` confidence level."
-
-
-
-&lt;br&gt;
-&lt;br&gt;
-
-&gt;  `\(95\%\)` confidence means that `\(95\%\)` of all samples will yield a sample proportion that is within 3 percentage points of the population proportion
+.bqt.font90[
+A .bold[95% confidence interval] means that if we were to draw numerous samples and calculate their confidence intervals, about 95% of these intervals would be expected to contain the true population parameter.]
 
 ---
 
@@ -201,14 +185,14 @@ class: middle
 .bql[
 If the sampling distribution is relatively .bold[symmetric] and .bold[bell-shaped], a `\(95\%\)` confidence interval can be estimated using `$$\mathbf{statistic} \pm 2 \times \mathbf{SE}$$`]
 
-
-&lt;br&gt;
 &lt;br&gt;
 
-&gt; `\(95\%\)` confidence means `\(95\%\)` of all samples will yield a statistic that is within 2 SE of the population parameter
+
+.bq.font90[A 95% confidence interval suggests that if we were to take many samples and compute the confidence interval for each, we would expect about 95% of these intervals to capture the true, but unknown, population proportion, with the current interval estimating this proportion to be within 3 percentage points of the sample proportion]
 
 
 ---
+
 class: middle
 
 # Confidence Intervals are ...
@@ -257,7 +241,7 @@ class: middle
 
 class: middle
 
-# What to do when we only have one sample - .bold.green-h[BOOTSTRAP!]
+# What to do when we only have one sample - .bold[BOOTSTRAP!]
 
 .bq[
 - .bold[Repeated sampling] is needed to compute the standard error of a sample statistic
@@ -271,8 +255,11 @@ class: middle
 
 # Bootstrap Distribution
 
+&gt; A .bold[bootstrap distribution] is the distribution of many bootstrap statistics.
+
+&lt;br&gt;
+
 .bql[
-- A .bold[bootstrap distribution] is the distribution of many bootstrap statistics.
 
 - The standard deviation of this distribution is called the .bold[bootstrap standard error] of the statistic.
 
@@ -304,7 +291,7 @@ count: false
 
 ```r
 library(CarletonStats)
-*X &lt;- c(20,24,19,23,22,16)
+*X &lt;- c(20,24,19,23,22,16)  # data
 ```
 ]
  
@@ -320,8 +307,8 @@ count: false
 
 ```r
 library(CarletonStats)
-X &lt;- c(20,24,19,23,22,16)
-*boot(X)
+X &lt;- c(20,24,19,23,22,16)  # data
+*boot(X)  # bootstrap
 ```
 ]
  
@@ -332,8 +319,8 @@ X &lt;- c(20,24,19,23,22,16)
 	** Bootstrap interval for mean 
 
  Observed  X : 20.66667 
- Mean of bootstrap distribution: 20.66233 
- Standard error of bootstrap distribution: 1.09957 
+ Mean of bootstrap distribution: 20.67122 
+ Standard error of bootstrap distribution: 1.09426 
 
  Bootstrap percentile interval
     2.5%    97.5% 
@@ -379,9 +366,6 @@ X &lt;- c(20,24,19,23,22,16)
 ]
 
 
-
-
-
 ---
 
 class: action
@@ -402,7 +386,7 @@ Please go over the class activity and [class helper page](https://stat120-winter
 ]
 ]
 
-<div class="countdown" id="timer_62631a2e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_bcd0c752" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
