--- a/public/stat220/Day9.html
+++ b/public/stat220/Day9.html
@@ -46,9 +46,9 @@ class: title-slide, middle
 
 # .fancy[Data Imports]
 
-### .fancy[Spring 23]
+### .fancy[Stat 220]
 
- April 14 2023
+ January 21 2024
 
 ---
 
@@ -59,7 +59,7 @@ class: title-slide, middle
 library(tidyverse)
 library(janitor)
 bar &lt;- tibble("First Name" = c("Yi", "Do"),
-              "last init" = c("C", "R"),
+              "Last initials" = c("C", "R"),
               "% in" = c(0.1, 0.5),
               "ñ$$$" = 1:2,
               " " = 3:2,
@@ -67,10 +67,10 @@ bar &lt;- tibble("First Name" = c("Yi", "Do"),
               "null" = c(NA, NA))
 bar
 # A tibble: 2 × 7
-  `First Name` `last init` `% in` `ñ$$$`   ` ` ` hi` null 
-  &lt;chr&gt;        &lt;chr&gt;        &lt;dbl&gt;  &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;lgl&gt;
-1 Yi           C              0.1      1     3 a     NA   
-2 Do           R              0.5      2     2 b     NA   
+  `First Name` `Last initials` `% in` `ñ$$$`   ` ` ` hi` null 
+  &lt;chr&gt;        &lt;chr&gt;            &lt;dbl&gt;  &lt;int&gt; &lt;int&gt; &lt;chr&gt; &lt;lgl&gt;
+1 Yi           C                  0.1      1     3 a     NA   
+2 Do           R                  0.5      2     2 b     NA   
 ```
 
 --
@@ -82,16 +82,16 @@ cleaned_bar &lt;- bar %&gt;%
   remove_empty(c("rows", "cols"))
 cleaned_bar
 # A tibble: 2 × 6
-  first_name last_init percent_in     n     x hi   
-  &lt;chr&gt;      &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
-1 Yi         C                0.1     1     3 a    
-2 Do         R                0.5     2     2 b    
+  first_name last_initials percent_in     n     x hi   
+  &lt;chr&gt;      &lt;chr&gt;              &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
+1 Yi         C                    0.1     1     3 a    
+2 Do         R                    0.5     2     2 b    
 ```
 
 ---
 
 
-# Handling Missing Data: `drop_na()` and `replace_na()`
+# Handling Missing Data: `tidyr::drop_na()` and `tidyr::replace_na()`
 
 
 .pull-left[
@@ -164,8 +164,6 @@ foo %&gt;% mutate(height = replace_na(height, 0),
 ---
 
 
-
-
 count: false
  
 ## Putting It All Together
@@ -205,11 +203,11 @@ foo %&gt;%
 
 ```
 # A tibble: 3 × 9
-     id name  height years last_init percent_in     n     x hi   
-  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
-1     3 Yi       3      50 C                0.1     1     3 a    
-2     4 Wu      NA      33 &lt;NA&gt;            NA      NA    NA &lt;NA&gt; 
-3     5 Do       2.8    NA R                0.5     2     2 b    
+     id name  height years last_initials percent_in     n     x hi   
+  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;              &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
+1     3 Yi       3      50 C                    0.1     1     3 a    
+2     4 Wu      NA      33 &lt;NA&gt;                NA      NA    NA &lt;NA&gt; 
+3     5 Do       2.8    NA R                    0.5     2     2 b    
 ```
 ]
 
@@ -231,10 +229,10 @@ foo %&gt;%
 
 ```
 # A tibble: 2 × 9
-     id name  height years last_init percent_in     n     x hi   
-  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
-1     3 Yi       3      50 C                0.1     1     3 a    
-2     5 Do       2.8    NA R                0.5     2     2 b    
+     id name  height years last_initials percent_in     n     x hi   
+  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;              &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
+1     3 Yi       3      50 C                    0.1     1     3 a    
+2     5 Do       2.8    NA R                    0.5     2     2 b    
 ```
 ]
 
@@ -258,10 +256,10 @@ foo %&gt;%
 
 ```
 # A tibble: 2 × 9
-     id name  height years last_init percent_in     n     x hi   
-  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;          &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
-1     3 Yi       3      50 C                0.1     1     3 a    
-2     5 Do       2.8     0 R                0.5     2     2 b    
+     id name  height years last_initials percent_in     n     x hi   
+  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;              &lt;dbl&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;
+1     3 Yi       3      50 C                    0.1     1     3 a    
+2     5 Do       2.8     0 R                    0.5     2     2 b    
 ```
 ]
 
@@ -278,7 +276,7 @@ foo %&gt;%
   drop_na(height) %&gt;%
   mutate(years = replace_na(years, 0),
          height = round(height, 1)) %&gt;%
-* select(id, name, height, years, last_init)
+* select(id, name, height, years, last_initials)
 ```
 ]
  
@@ -286,11 +284,40 @@ foo %&gt;%
 
 ```
 # A tibble: 2 × 5
-     id name  height years last_init
-  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;    
-1     3 Yi       3      50 C        
-2     5 Do       2.8     0 R        
+     id name  height years last_initials
+  &lt;int&gt; &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;chr&gt;        
+1     3 Yi       3      50 C            
+2     5 Do       2.8     0 R            
 ```
+]
+
+---
+count: false
+ 
+## Putting It All Together
+.panel1-all-auto[
+
+```r
+foo %&gt;%
+  left_join(cleaned_bar,
+            by = c("name" = "first_name")) %&gt;%
+  drop_na(height) %&gt;%
+  mutate(years = replace_na(years, 0),
+         height = round(height, 1)) %&gt;%
+  select(id, name, height, years, last_initials) %&gt;%
+* knitr::kable()
+```
+]
+ 
+.panel2-all-auto[
+
+
+| id|name | height| years|last_initials |
+|--:|:----|------:|-----:|:-------------|
+|  3|Yi   |    3.0|    50|C             |
+|  5|Do   |    2.8|     0|R             |
+
+
 ]
 
 &lt;style&gt;
@@ -300,7 +327,7 @@ foo %&gt;%
   hight: 32%;
   float: left;
   padding-left: 1%;
-  font-size: 70%
+  font-size: 65%
 }
 .panel2-all-auto {
   color: black;
@@ -308,7 +335,7 @@ foo %&gt;%
   hight: 32%;
   float: left;
   padding-left: 1%;
-  font-size: 70%
+  font-size: 65%
 }
 .panel3-all-auto {
   color: black;
@@ -316,7 +343,7 @@ foo %&gt;%
   hight: 33%;
   float: left;
   padding-left: 1%;
-  font-size: 70%
+  font-size: 65%
 }
 &lt;/style&gt;
 
@@ -520,16 +547,16 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bql[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=39491)
-- Get the class activity 10.Rmd file
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
+- Get the class activity 9.Rmd file
 - Skim through problem 1
 ]
 
 ]
 
-<div class="countdown" id="timer_d34ca26e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e2c1d7ca" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
@@ -612,7 +639,7 @@ problems(desserts)
  8     7     6 date in ISO8601 17 August 2010 ""   
  9     8     6 date in ISO8601 17 August 2010 ""   
 10     9     4 a number        N/A            ""   
-# … with 546 more rows
+# ℹ 546 more rows
 ```
 
 ---
@@ -632,7 +659,7 @@ class: middle
 3     4     6 date in ISO8601 17 August 2010 ""   
 4     5     4 a number        N/A            ""   
 5     5     6 date in ISO8601 17 August 2010 ""   
-# … with 551 more rows
+# ℹ 551 more rows
 ```
 ]
 
@@ -724,8 +751,7 @@ desserts &lt;- read_csv(
 ```r
 problems(desserts)
 # A tibble: 0 × 5
-# … with 5 variables: row &lt;int&gt;, col &lt;int&gt;, expected &lt;chr&gt;, actual &lt;chr&gt;,
-#   file &lt;chr&gt;
+# ℹ 5 variables: row &lt;int&gt;, col &lt;int&gt;, expected &lt;chr&gt;, actual &lt;chr&gt;, file &lt;chr&gt;
 ```
 
 
@@ -739,22 +765,22 @@ class: middle
 
 ```
 # A tibble: 549 × 16
-   series episode baker     techn…¹ result uk_airdate us_se…² us_airdate shows…³
-    &lt;dbl&gt;   &lt;dbl&gt; &lt;chr&gt;       &lt;dbl&gt; &lt;chr&gt;  &lt;date&gt;       &lt;dbl&gt; &lt;date&gt;     &lt;chr&gt;  
- 1      1       1 Annetha         2 IN     2010-08-17      NA NA         chocol…
- 2      1       1 David           3 IN     2010-08-17      NA NA         chocol…
- 3      1       1 Edd             1 IN     2010-08-17      NA NA         no cho…
- 4      1       1 Jasminder      NA IN     2010-08-17      NA NA         no cho…
- 5      1       1 Jonathan        9 IN     2010-08-17      NA NA         no cho…
- 6      1       1 Louise         NA IN     2010-08-17      NA NA         chocol…
- 7      1       1 Miranda         8 IN     2010-08-17      NA NA         chocol…
- 8      1       1 Ruth           NA IN     2010-08-17      NA NA         chocol…
- 9      1       1 Lea            10 OUT    2010-08-17      NA NA         chocol…
-10      1       1 Mark           NA OUT    2010-08-17      NA NA         chocol…
-# … with 539 more rows, 7 more variables: showstopper_dessert &lt;chr&gt;,
+   series episode baker     technical result uk_airdate us_season us_airdate
+    &lt;dbl&gt;   &lt;dbl&gt; &lt;chr&gt;         &lt;dbl&gt; &lt;chr&gt;  &lt;date&gt;         &lt;dbl&gt; &lt;date&gt;    
+ 1      1       1 Annetha           2 IN     2010-08-17        NA NA        
+ 2      1       1 David             3 IN     2010-08-17        NA NA        
+ 3      1       1 Edd               1 IN     2010-08-17        NA NA        
+ 4      1       1 Jasminder        NA IN     2010-08-17        NA NA        
+ 5      1       1 Jonathan          9 IN     2010-08-17        NA NA        
+ 6      1       1 Louise           NA IN     2010-08-17        NA NA        
+ 7      1       1 Miranda           8 IN     2010-08-17        NA NA        
+ 8      1       1 Ruth             NA IN     2010-08-17        NA NA        
+ 9      1       1 Lea              10 OUT    2010-08-17        NA NA        
+10      1       1 Mark             NA OUT    2010-08-17        NA NA        
+# ℹ 539 more rows
+# ℹ 8 more variables: showstopper_chocolate &lt;chr&gt;, showstopper_dessert &lt;chr&gt;,
 #   showstopper_fruit &lt;chr&gt;, showstopper_nut &lt;chr&gt;, signature_chocolate &lt;chr&gt;,
-#   signature_dessert &lt;chr&gt;, signature_fruit &lt;chr&gt;, signature_nut &lt;chr&gt;, and
-#   abbreviated variable names ¹​technical, ²​us_season, ³​showstopper_chocolate
+#   signature_dessert &lt;chr&gt;, signature_fruit &lt;chr&gt;, signature_nut &lt;chr&gt;
 ```
 
 ---
@@ -815,9 +841,9 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_cb58a9ba" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5a36cedf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
