--- a/static/stat120/Day9.html
+++ b/static/stat120/Day9.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 14 2023
+ January 21 2024
 
 
 ---
@@ -68,6 +68,45 @@ class: middle
 .bold[95 % CI] $$ statistic \pm 2\times SE $$
 
 ]
+
+
+---
+
+# Confidence level analogy and recap
+
+.pull-left[
+.bq.font60[
+### Shooting Arrows:
+
+    - Bow's confidence level determines accuracy.
+    
+    - A "95% confident" bow:
+      - 95 arrows hit inside the bulls eye out of 100
+      - 5 arrows miss
+
+### Single Shot Principle:
+
+     - Each arrow either hits or misses.
+  
+     - No in-between or partial accuracy.
+
+
+]
+]
+
+
+
+.pull-right[
+&lt;br&gt;
+&lt;center&gt;
+&lt;img src="images/dart.png" width="60%" height="60%"&gt;&lt;br&gt;
+&lt;a style="font-size: smaller;"&gt;Confidence level analogy with throwing darts&lt;/a&gt;
+&lt;/center&gt;
+
+
+]
+
+
 
 
 ---
@@ -160,7 +199,7 @@ The correct answer is A.
 --
 
 
-.yellow-h.font120[I am 95% sure that the mean of a population will fall within a 95% confidence interval for the mean]
+.yellow-h.font120[.b[Correct:] I am 95% sure that the mean of a population will fall within a 95% confidence interval for the mean]
 
 ---
 
@@ -263,7 +302,7 @@ background-size: 800px, 100% 100%
 &lt;br&gt;
 &lt;br&gt;
 
-# Sampling Distribution Vs Bootstrap Distribution
+# Recap: Sampling Distribution Vs Bootstrap Distribution
 
 .pull-left[
 
@@ -287,7 +326,7 @@ background-size: 800px, 100% 100%
 - Take .green[many bootstrap samples] from the original sample, compute the statistic for each bootstrap sample
 - .bold[Shape:] bell-shaped when n is large
 - .bold[Center:] original sample statistic!
-- .bold[Spread:] caled the bootstrap SE of the statistic
+- .bold[Spread:] called the bootstrap SE of the statistic
 ]
 
 ]
@@ -386,12 +425,13 @@ class: action
 &lt;br&gt;
 .bql[
 
-Please work on the in-class activity and we will discuss this together!
+- Let's head over to the [course helper page](https://stat120-winter24.netlify.app/) to see some more examples 
+- We will then do a class activity together
 
 ]
 ]
 
-<div class="countdown" id="timer_8bee057a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_6d2a18c0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
