--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 9 Slides (html)" />
+  <meta name="description" content="Day 9 Slides (html)
+Day 10 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week4/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week4/" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
-  <meta property="og:description" content="Day 9 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 9 Slides (html)
+Day 10 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -801,6 +803,7 @@
 
           <div class="article-style">
             <p>Day 9 Slides (<a href="/stat220/Day9.html" target="_blank">html</a>)</p>
+<p>Day 10 Slides (<a href="/stat220/Day10.html" target="_blank">html</a>)</p>
 
           </div>
 
