--- a/public/stat120/Day11.html
+++ b/public/stat120/Day11.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- October 04 2023
+ January 22 2024
 
 
 ---
@@ -181,7 +181,7 @@ letter.
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_45b323cb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_8a9e67ef" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -201,7 +201,7 @@ Let's see each other's results! Please enter your answer to (1a) in the appropri
 - [Google form Section 02](https://forms.gle/rEzqai9TCCsG4fep8)
 ]
 
-<div class="countdown" id="timer_650edd01" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9f7766ff" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -433,13 +433,13 @@ class: action
 &lt;br&gt;
 .bql[
 
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the rest of the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_781ab859" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_add20d57" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
