--- a/public/courses/stat120/week4/index.html
+++ b/public/courses/stat120/week4/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 9 Slides (html)
-Day 10 Midterm!" />
+Day 10 Midterm!
+Day 11 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week4/" />
@@ -298,7 +299,8 @@ Day 10 Midterm!" />
   <meta property="og:url" content="/courses/stat120/week4/" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
   <meta property="og:description" content="Day 9 Slides (html)
-Day 10 Midterm!" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 10 Midterm!
+Day 11 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -796,6 +798,7 @@ Day 10 Midterm!" /><meta property="og:image" content="/media/icon_hua2ec155b4296
           <div class="article-style">
             <p>Day 9 Slides (<a href="/stat120/Day9.html" target="_blank">html</a>)</p>
 <p>Day 10 Midterm!</p>
+<p>Day 11 Slides (<a href="/stat120/Day11.html" target="_blank">html</a>)</p>
 
           </div>
 
