--- a/static/stat120/Day11.html
+++ b/static/stat120/Day11.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 22 2024
+ January 25 2024
 
 
 ---
@@ -174,36 +174,18 @@ letter.
 
 - Repeat a couple of times then switch roles.
 
-- Record your answer in .bold[Problem (1a)]
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
+
+- Record your answer in Problem 1 of today's class activity
 
 ]
 
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_8a9e67ef" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_4009f60a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
-
-
----
-
-class: middle, center
-
-
-Let's see each other's results! Please enter your answer to (1a) in the appropriate Google form:
-
-.bqt[
-
-- [Google form Section 01](https://forms.gle/4ZDAnMka76LqdUVUA)
-
-- [Google form Section 02](https://forms.gle/rEzqai9TCCsG4fep8)
-]
-
-<div class="countdown" id="timer_9f7766ff" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
@@ -433,13 +415,13 @@ class: action
 &lt;br&gt;
 .bql[
 
-- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/) again
 - Please do the rest of the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_add20d57" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_45241d9e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
