--- a/static/stat220/Day12.html
+++ b/static/stat220/Day12.html
@@ -45,9 +45,9 @@ class: title-slide, middle
 
 # .fancy[Advanced String Manipulation]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- April 24 2023
+ January 24 2024
 
 ---
 
@@ -618,7 +618,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_7d3f8858" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_eda91634" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
