--- a/static/stat220/Day14.html
+++ b/static/stat220/Day14.html
@@ -45,9 +45,9 @@ class: title-slide, middle
 
 # .fancy[Functions]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- April 26 2023
+ January 24 2024
 
 
 ---
@@ -320,14 +320,14 @@ class: action, middle
 ]
 .pull-right-60[
 .bql[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 14.Rmd file
 - Work on activity 1
 ]
 
 ]
 
-<div class="countdown" id="timer_c5a4a26d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_01583fb8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -587,7 +587,7 @@ text_data %&gt;%
  8 i        
  9 don’t    
 10 even     
-# … with 45 more rows
+# ℹ 45 more rows
 ```
 ]
 
@@ -607,6 +607,7 @@ text_data %&gt;%
 ]
  
 .panel2-demo-auto[
+
 
 |word       |
 |:----------|
@@ -665,6 +666,8 @@ text_data %&gt;%
 |involved   |
 |in         |
 |this       |
+
+
 ]
 
 &lt;style&gt;
@@ -762,6 +765,8 @@ text_data %&gt;%
 |we         |  1|
 |well       |  1|
 |when       |  1|
+
+
 ]
 
 ---
@@ -777,18 +782,18 @@ text_data %&gt;%
 ```r
 stop_words %&gt;% sample_n(10)
 # A tibble: 10 × 2
-   word      lexicon 
-   &lt;chr&gt;     &lt;chr&gt;   
- 1 although  SMART   
- 2 very      snowball
- 3 regarding SMART   
- 4 must      onix    
- 5 looks     SMART   
- 6 most      SMART   
- 7 looking   SMART   
- 8 above     onix    
- 9 someone   SMART   
-10 latterly  SMART   
+   word       lexicon 
+   &lt;chr&gt;      &lt;chr&gt;   
+ 1 faces      onix    
+ 2 no         snowball
+ 3 ordered    onix    
+ 4 nowhere    SMART   
+ 5 needing    onix    
+ 6 even       onix    
+ 7 what       onix    
+ 8 definitely SMART   
+ 9 clearly    SMART   
+10 about      SMART   
 ```
 
 
@@ -807,11 +812,14 @@ background-size: cover
 
 
 
+
 |reviewerName      |reviewText                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | ratingOverall|
 |:-----------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------:|
 |Brian             |i have used monster cables for years and with good reason the lifetime warranty is worth the price alone simple fact cables break but getting to replace them at no cost is where it is at                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |             5|
 |Fender Guy "Rick" |i now use this cable to run from the output of my pedal chain to the input of my fender amp after i bought monster cable to hook up my pedal board i thought i would try another one and update my guitar i had been using a high end planet waves cable that i bought in the s once i found out the input jacks on the new monster cable did not fit into the fender strat jack i was a little disappointed i did not return it and as stated i use it for the output on the pedal board save your money i went back to my planet waves cable i payed back in the eighties for the planet waves which now comes in at around what I am getting at is you get what you pay for i thought waves was a lot of money back in the day but i haven t bought a guitar cable since this one plus years and still working planet waves wins |             3|
 |synthezatory      |I am a pro cheapo and i hated this thing they are noisy and the cables feel really cheap gummy like drop few more bucks and get something else exclamationmark                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |             1|
+
+
 
 
 ---
@@ -830,19 +838,19 @@ count: false
 
 ```
 # A tibble: 10,261 × 3
-   reviewerName                                        reviewText        ratin…¹
+   reviewerName                                        reviewText  ratingOverall
    &lt;chr&gt;                                               &lt;chr&gt;               &lt;dbl&gt;
- 1 "cassandra tu \"Yeah, well, that's just like, u..." not much to writ…       5
- 2 "Jake"                                              the product does…       5
- 3 "Rick Bennette \"Rick Bennette\""                   the primary job …       5
- 4 "RustyBill \"Sunday Rocker\""                       nice windscreen …       5
- 5 "SEAN MASLANKA"                                     this pop filter …       5
- 6 "Bill Lewey \"blewey\""                             so good that i b…       5
- 7 "Brian"                                             i have used mons…       5
- 8 "Fender Guy \"Rick\""                               i now use this c…       3
- 9 "G. Thomas \"Tom\""                                 perfect for my e…       5
-10 "Kurt Robair"                                       monster makes th…       5
-# … with 10,251 more rows, and abbreviated variable name ¹​ratingOverall
+ 1 "cassandra tu \"Yeah, well, that's just like, u..." not much t…             5
+ 2 "Jake"                                              the produc…             5
+ 3 "Rick Bennette \"Rick Bennette\""                   the primar…             5
+ 4 "RustyBill \"Sunday Rocker\""                       nice winds…             5
+ 5 "SEAN MASLANKA"                                     this pop f…             5
+ 6 "Bill Lewey \"blewey\""                             so good th…             5
+ 7 "Brian"                                             i have use…             5
+ 8 "Fender Guy \"Rick\""                               i now use …             3
+ 9 "G. Thomas \"Tom\""                                 perfect fo…             5
+10 "Kurt Robair"                                       monster ma…             5
+# ℹ 10,251 more rows
 ```
 ]
 
@@ -874,7 +882,7 @@ musical_instr_reviews %&gt;%
  8 i now use this cable to run from the output of my pedal chain to the input o…
  9 perfect for my epiphone sheraton ii monster cables are well constructed i ha…
 10 monster makes the best cables and a lifetime warranty doesnt hurt either thi…
-# … with 10,251 more rows
+# ℹ 10,251 more rows
 ```
 ]
 
@@ -908,7 +916,7 @@ musical_instr_reviews %&gt;%
  8 it     
  9 does   
 10 exactly
-# … with 953,796 more rows
+# ℹ 953,796 more rows
 ```
 ]
 
@@ -943,7 +951,7 @@ musical_instr_reviews %&gt;%
  8 lowest    
  9 prices    
 10 pop       
-# … with 323,390 more rows
+# ℹ 323,390 more rows
 ```
 ]
 
@@ -979,7 +987,7 @@ musical_instr_reviews %&gt;%
  8 quality          1810
  9 nice             1707
 10 time             1586
-# … with 18,521 more rows
+# ℹ 18,521 more rows
 ```
 ]
 
@@ -1016,7 +1024,7 @@ musical_instr_reviews %&gt;%
  8 quality          1810
  9 nice             1707
 10 time             1586
-# … with 15 more rows
+# ℹ 15 more rows
 ```
 ]
 
@@ -1295,19 +1303,19 @@ set.seed(123)  # for reproducibility
 
 ```
 # A tibble: 10,261 × 3
-   reviewerName                                        reviewText        ratin…¹
+   reviewerName                                        reviewText  ratingOverall
    &lt;chr&gt;                                               &lt;chr&gt;               &lt;dbl&gt;
- 1 "cassandra tu \"Yeah, well, that's just like, u..." not much to writ…       5
- 2 "Jake"                                              the product does…       5
- 3 "Rick Bennette \"Rick Bennette\""                   the primary job …       5
- 4 "RustyBill \"Sunday Rocker\""                       nice windscreen …       5
- 5 "SEAN MASLANKA"                                     this pop filter …       5
- 6 "Bill Lewey \"blewey\""                             so good that i b…       5
- 7 "Brian"                                             i have used mons…       5
- 8 "Fender Guy \"Rick\""                               i now use this c…       3
- 9 "G. Thomas \"Tom\""                                 perfect for my e…       5
-10 "Kurt Robair"                                       monster makes th…       5
-# … with 10,251 more rows, and abbreviated variable name ¹​ratingOverall
+ 1 "cassandra tu \"Yeah, well, that's just like, u..." not much t…             5
+ 2 "Jake"                                              the produc…             5
+ 3 "Rick Bennette \"Rick Bennette\""                   the primar…             5
+ 4 "RustyBill \"Sunday Rocker\""                       nice winds…             5
+ 5 "SEAN MASLANKA"                                     this pop f…             5
+ 6 "Bill Lewey \"blewey\""                             so good th…             5
+ 7 "Brian"                                             i have use…             5
+ 8 "Fender Guy \"Rick\""                               i now use …             3
+ 9 "G. Thomas \"Tom\""                                 perfect fo…             5
+10 "Kurt Robair"                                       monster ma…             5
+# ℹ 10,251 more rows
 ```
 ]
 
@@ -1343,7 +1351,7 @@ musical_instr_reviews %&gt;%
  8 i now use this cable to run from the output of my pedal chain to the input o…
  9 perfect for my epiphone sheraton ii monster cables are well constructed i ha…
 10 monster makes the best cables and a lifetime warranty doesnt hurt either thi…
-# … with 10,251 more rows
+# ℹ 10,251 more rows
 ```
 ]
 
@@ -1381,7 +1389,7 @@ musical_instr_reviews %&gt;%
  8 it     
  9 does   
 10 exactly
-# … with 953,796 more rows
+# ℹ 953,796 more rows
 ```
 ]
 
@@ -1420,7 +1428,7 @@ musical_instr_reviews %&gt;%
  8 lowest    
  9 prices    
 10 pop       
-# … with 323,390 more rows
+# ℹ 323,390 more rows
 ```
 ]
 
@@ -1460,7 +1468,7 @@ musical_instr_reviews %&gt;%
  8 secure     positive 
  9 nice       positive 
 10 marginally negative 
-# … with 51,755 more rows
+# ℹ 51,755 more rows
 ```
 ]
 
@@ -1501,7 +1509,7 @@ musical_instr_reviews %&gt;%
  8 fine      positive    742
  9 hard      negative    625
 10 clean     positive    614
-# … with 2,293 more rows
+# ℹ 2,293 more rows
 ```
 ]
 
@@ -3922,7 +3930,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_845964d3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_bc19d48c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
