--- a/static/stat220/Day15.html
+++ b/static/stat220/Day15.html
@@ -45,9 +45,9 @@ class: title-slide, middle
 
 # .fancy[Iterations and functionals]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- April 28 2023
+ January 24 2024
 
 ---
 
@@ -385,7 +385,7 @@ class: action, middle
 ]
 .pull-right-60[
 .bql[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 15.Rmd file
 - Work on activity 1
 - Ask me questions
@@ -393,7 +393,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_7a5a9c2e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_7d6bc4f6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -810,7 +810,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_bf6d2089" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e12248d2" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
